syntax = "proto3";

package api.customer;

import "google/api/annotations.proto";

option go_package = "customer/api/customer;customer";

service Customer {
  // 获取验证码
  rpc GetCaptcha (GetCaptchaRequest) returns (GetCaptchaReply) {
    option (google.api.http) = {
      get: "/customer/getCaptcha/{telephone}"
    };
  };
}

message GetCaptchaRequest {
  string telephone = 1;
}

message GetCaptchaReply {
  int32 code = 1;
  string message = 2;
  string data = 3;
  int32 verify_code_expire = 4;
}


