syntax = "proto3";

package api.verifyCode;

option go_package = "verifyCode/api/verifyCode;verifyCode";
option java_multiple_files = true;
option java_package = "api.verifyCode";

service VerifyCode {
	rpc GetVerifyCode (GetVerifyCodeRequest) returns (GetVerifyCodeReply);
}

// 验证码类型
enum TYPE {
	DEFAULT = 0;
	DIGIT = 1;
	LETTER = 2;
	MIXED = 3;
}

message GetVerifyCodeRequest {
	// 验证码长度
	uint32  length = 1;
	// 验证码类型
	TYPE type = 2;
}

message GetVerifyCodeReply {
	//生成验证码
	string code = 1;
}